--- a/book.asciidoc
+++ b/book.asciidoc
@@ -48,6 +48,8 @@ include::creating-a-subsite.asciidoc[]
 
 include::understanding-request.asciidoc[]
 
+include::sql-joins.asciidoc[]
+
 include::yesod-for-haskellers.asciidoc[]
 
 [[I_part_d1e8222]]
@@ -62,6 +64,14 @@ include::wiki-chat-example.asciidoc[]
 include::json-web-service.asciidoc[]
 
 include::case-study-sphinx.asciidoc[]
+
+include::visitor-counter.asciidoc[]
+
+include::single-process-pubsub.asciidoc[]
+
+include::environment-variables.asciidoc[]
+
+include::route-attributes.asciidoc[]
 
 [[I_part_d1e8717]]
 = Appendices
