--- a/shakespearean-templates.asciidoc
+++ b/shakespearean-templates.asciidoc
@@ -56,17 +56,6 @@ $doctype 5
         <footer>^{copyright}
 ----
 
-==== Cassius (CSS)
-
-[source, cassius]
-----
-#myid
-    color: #{red}
-    font-size: #{bodyFontSize}
-foo bar baz
-    background-image: url(@{MyBackgroundR})
-----
-
 ==== Lucius (CSS)
 
 [source, lucius]
@@ -76,8 +65,23 @@ section.blog {
     border: 1px solid #000;
     h1 {
         color: #{headingColor};
+        background-image: url(@{MyBackgroundR});
     }
 }
+----
+
+==== Cassius (CSS)
+
+The following is equivalent to the Lucius example above.
+
+[source, cassius]
+----
+section.blog
+    padding: 1em
+    border: 1px solid #000
+    h1
+        color: #{headingColor}
+        background-image: url(@{MyBackgroundR})
 ----
 
 ==== Julius (Javascript)
@@ -333,6 +337,24 @@ inner "i" tag will not. You are free to use whichever approach you want, there
 is no penalty for either choice. Be aware, however, that the *only* time you
 use closing tags in Hamlet is for such inline tags; normal tags are not closed.
 
+Another outcome of this is that any tags after the first tag do not have
+special treatment for IDs and classes. For example, the Hamlet snippet:
+
+[source, hamlet]
+----
+<p #firstid>Paragraph <i #secondid>italic end.
+----
+
+generates the HTML:
+
+[source, html]
+----
+<p id="firstid">Paragraph <i #secondid>italic</i> end.</p>
+----
+
+Notice how the +p+ tag is automatically closed, and its attributes get special
+treatment, whereas the +i+ tag is treated as plain text.
+
 ===== Interpolation
 
 What we have so far is a nice, simplified HTML, but it doesn't let us interact
@@ -417,6 +439,53 @@ main = putStrLn $ renderHtml $ [hamlet|
     <p>This is my page.
     ^{footer}
 |] render
+----
+
+Additionally, there is a variant of URL interpolation which allows you to embed
+query string parameters. This can be useful, for example, for creating
+paginated responses. Instead of using +@{...}+, you add a question mark
+(+@?{...}+) to indicate the presence of a query string. The value you provide
+must be a two-tuple with the first value being a type-safe URL and the second
+being a list of query string parameter pairs. See the next code snippet for an
+example.
+
+[source, haskell]
+----
+{-# LANGUAGE QuasiQuotes #-}
+{-# LANGUAGE OverloadedStrings #-}
+import Text.Hamlet (HtmlUrl, hamlet)
+import Text.Blaze.Html.Renderer.String (renderHtml)
+import Data.Text (Text, append, pack)
+import Control.Arrow (second)
+import Network.HTTP.Types (renderQueryText)
+import Data.Text.Encoding (decodeUtf8)
+import Blaze.ByteString.Builder (toByteString)
+
+data MyRoute = SomePage
+
+render :: MyRoute -> [(Text, Text)] -> Text
+render SomePage params = "/home" `append`
+    decodeUtf8 (toByteString $ renderQueryText True (map (second Just) params))
+
+main :: IO ()
+main = do
+    let currPage = 2 :: Int
+    putStrLn $ renderHtml $ [hamlet|
+<p>
+    You are currently on page #{currPage}.
+    <a href=@?{(SomePage, [("page", pack $ show $ currPage - 1)])}>Previous
+    <a href=@?{(SomePage, [("page", pack $ show $ currPage + 1)])}>Next
+|] render
+----
+
+This generates the expected HTML:
+
+[source, html]
+----
+<p>You are currently on page 2.
+<a href="/home?page=1">Previous</a>
+<a href="/home?page=3">Next</a>
+</p>
 ----
 
 ===== Attributes
@@ -586,6 +655,7 @@ article {
     code { background-color: grey; }
     p { text-indent: 2em; }
     a { text-decoration: none; }
+    > h1 { color: green; }
 }
 ----
 
@@ -774,8 +844,8 @@ The naming scheme for the functions is very consistent.
 So far, we've seen how to generate an +HtmlUrl+ value from Hamlet, which is a
 piece of HTML with embedded type-safe URLs. There are currently three other
 values we can generate using Hamlet: plain HTML, HTML with URLs *and*
-internationalized messages, and widgets. That last one will be covered in the
-widgets chapter.
+internationalized messages, and widgets. That last one will be covered in more
+detail in the widgets chapter.
 
 To generate plain HTML without any embedded URLs, we use "simplified Hamlet".
 There are a few changes:
