--- a/yesod-for-haskellers.asciidoc
+++ b/yesod-for-haskellers.asciidoc
@@ -1,3 +1,7 @@
+== Yesod for Haskellers
+
+FIXME: This chapter needs to be reviewed for WAI 3.0/Yesod 1.4
+
 The majority of this book is built around giving practical information on how
 to get common tasks done, without drilling too much into the details of what's
 going on under the surface. While the book presumes knowledge of Haskell, it
@@ -9,7 +13,7 @@ In this appendix, we'll start off from a bare minimum web application, and
 build up to more complicated examples, explaining the components and their
 types along the way.
 
-== Hello Warp
+=== Hello Warp
 
 Let's start off with the most bare minimum application we can think of:
 
@@ -24,7 +28,7 @@ main :: IO ()
 main = run 3000 app
 
 app :: Application
-app _req = return $ responseLBS
+app _req sendResponse = sendResponse $ responseLBS
     status200
     [("Content-Type", "text/plain")]
     "Hello Warp!"
@@ -53,13 +57,13 @@ main :: IO ()
 main = run 3000 app
 
 app :: Application
-app req =
+app req sendResponse =
     case pathInfo req of
-        ["foo", "bar"] -> return $ responseLBS
+        ["foo", "bar"] -> sendResponse $ responseLBS
             status200
             [("Content-Type", "text/plain")]
             "You requested /foo/bar"
-        _ -> return $ responseLBS
+        _ -> sendResponse $ responseLBS
             status200
             [("Content-Type", "text/plain")]
             "You requested something else"
@@ -91,7 +95,7 @@ main :: IO ()
 main = run 3000 app
 
 app :: Application
-app _req = return $ responseBuilder
+app _req sendResponse = sendResponse $ responseBuilder
     status200
     [("Content-Type", "text/plain")]
     (fromByteString "Hello from blaze-builder!" :: Builder)
@@ -116,7 +120,7 @@ main :: IO ()
 main = run 3000 app
 
 app :: Application
-app _req = return $ responseBuilder
+app _req sendResponse = sendResponse $ responseBuilder
     status200
     [("Content-Type", "text/html")] -- yay!
     (renderHtmlBuilder myPage)
@@ -147,66 +151,68 @@ import           Blaze.ByteString.Builder.Char.Utf8 (fromShow)
 import           Control.Concurrent                 (threadDelay)
 import           Control.Monad                      (forM_)
 import           Control.Monad.Trans.Class          (lift)
-import           Data.Conduit                       (Flush (Chunk, Flush),
-                                                     Source, yield)
 import           Data.Monoid                        ((<>))
 import           Network.HTTP.Types                 (status200)
 import           Network.Wai                        (Application,
-                                                     responseSource)
+                                                     responseStream)
 import           Network.Wai.Handler.Warp           (run)
 
 main :: IO ()
 main = run 3000 app
 
 app :: Application
-app _req = return $ responseSource
+app _req sendResponse = sendResponse $ responseStream
     status200
     [("Content-Type", "text/plain")]
-    mySrc
+    myStream
 
-mySrc :: Source IO (Flush Builder)
-mySrc = do
-    yield $ Chunk $ fromByteString "Starting streaming response.\n"
-    yield $ Chunk $ fromByteString "Performing some I/O.\n"
-    yield Flush
+myStream :: (Builder -> IO ()) -> IO () -> IO ()
+myStream send flush = do
+    send $ fromByteString "Starting streaming response.\n"
+    send $ fromByteString "Performing some I/O.\n"
+    flush
     -- pretend we're performing some I/O
-    lift $ threadDelay 1000000
-    yield $ Chunk $ fromByteString "I/O performed, here are some results.\n"
+    threadDelay 1000000
+    send $ fromByteString "I/O performed, here are some results.\n"
     forM_ [1..50 :: Int] $ \i -> do
-        yield $ Chunk $ fromByteString "Got the value: " <>
-                        fromShow i <>
-                        fromByteString "\n"
+        send $ fromByteString "Got the value: " <>
+               fromShow i <>
+               fromByteString "\n"
 ----
 
 Another common requirement when dealing with a streaming response is safely
 allocating a scarce resource- such as a file handle. By *safely*, I mean
 ensuring that the response will be released, even in the case of some
-exception. To deal with that, you can use +responseSourceBracket+:
+exception. To deal with that, you can use +responseSourceBracket+: FIXME change prose
 
 [source, haskell]
 ----
 {-# LANGUAGE OverloadedStrings #-}
 import           Blaze.ByteString.Builder (fromByteString)
+import qualified Data.ByteString          as S
 import           Data.Conduit             (Flush (Chunk), ($=))
 import           Data.Conduit.Binary      (sourceHandle)
 import qualified Data.Conduit.List        as CL
 import           Network.HTTP.Types       (status200)
-import           Network.Wai              (Application, responseSourceBracket)
+import           Network.Wai              (Application, responseStream)
 import           Network.Wai.Handler.Warp (run)
-import           System.IO                (IOMode (ReadMode), hClose, openFile)
+import           System.IO                (IOMode (ReadMode), withFile)
 
 main :: IO ()
 main = run 3000 app
 
 app :: Application
-app _req = responseSourceBracket
-    (openFile "index.html" ReadMode)
-    hClose
-    $ \handle -> return
-        ( status200
-        , [("Content-Type", "text/html")]
-        , sourceHandle handle $= CL.map (Chunk . fromByteString)
-        )
+app _req sendResponse = withFile "index.html" ReadMode $ \handle ->
+    sendResponse $ responseStream
+        status200
+        [("Content-Type", "text/html")]
+        $ \send _flush ->
+            let loop = do
+                    bs <- S.hGet handle 4096
+                    if S.null bs
+                        then return ()
+                        else send (fromByteString bs) >> loop
+             in loop
 ----
 
 But in the case of serving files, it's more efficient to use +responseFile+,
@@ -223,7 +229,7 @@ main :: IO ()
 main = run 3000 app
 
 app :: Application
-app _req = return $ responseFile
+app _req sendResponse = sendResponse $ responseFile
     status200
     [("Content-Type", "text/html")]
     "index.html"
@@ -233,7 +239,7 @@ app _req = return $ responseFile
 
 There are many aspects of WAI we haven't covered here. One important topic is WAI middlewares, which we'll cover towards the end of this chapter. We also haven't inspected request bodies at all. But for the purposes of understanding Yesod, we've covered enough for the moment.
 
-== What about Yesod?
+=== What about Yesod?
 
 In all our excitement about WAI and Warp, we still haven't seen anything about Yesod! Since we just learnt all about WAI, our first question should be: how does Yesod interact with WAI. The answer to that is with one very important function:
 
@@ -292,8 +298,8 @@ instance RenderRoute App where
                         )
 
 instance YesodDispatch App where
-    yesodDispatch (YesodRunnerEnv _logger site _sessionBackend) _req =
-        return $ responseBuilder
+    yesodDispatch (YesodRunnerEnv _logger site _sessionBackend) _req sendResponse =
+        sendResponse $ responseBuilder
             status200
             [("Content-Type", "text/html")]
             (renderHtmlBuilder $ welcomeMessage site)
@@ -354,7 +360,7 @@ off our application to Warp, just like we did in the past.
 Congratulations, you've now seen your first Yesod application! (Or, at least
 your first Yesod application in this appendix.)
 
-== The HandlerT monad transformer
+=== The HandlerT monad transformer
 
 While that example was technically using Yesod, it was incredibly uninspiring.
 There's no question that Yesod did nothing more than get in our way relative to
@@ -407,7 +413,7 @@ getHomeR = do
     return $ welcomeMessage site
 
 instance YesodDispatch App where
-    yesodDispatch yesodRunnerEnv req =
+    yesodDispatch yesodRunnerEnv req sendResponse =
         let maybeRoute =
                 case pathInfo req of
                     [] -> Just HomeR
@@ -416,7 +422,7 @@ instance YesodDispatch App where
                 case maybeRoute of
                     Nothing -> notFound
                     Just HomeR -> getHomeR
-         in yesodRunner handler yesodRunnerEnv maybeRoute req
+         in yesodRunner handler yesodRunnerEnv maybeRoute req sendResponse
 
 main :: IO ()
 main = do
@@ -485,7 +491,7 @@ consume. +yesodRunner+ then converts that into a WAI response, setting the
 +Content-Type+ response header to the mime type, using a 200 OK status code,
 and sending the response body.
 
-=== (To)Content, (To)TypedContent
+==== (To)Content, (To)TypedContent
 
 At the very core of Yesod's content system are the following types:
 
@@ -540,7 +546,7 @@ And Yesod provides instances for many common data types, including +Text+,
 +getHomeR+ function was able to return +Html+: Yesod knows how to convert it to
 +TypedContent+, and from there it can be converted into a +WAI+ response.
 
-=== HasContentType and representations
+==== HasContentType and representations
 
 This typeclass approach allows for one other nice abstraction. For many types, the type system itself lets us know what the content-type for the content should be. For example, +Html+ will always be served with a +text/html+ content-type.
 
@@ -614,7 +620,7 @@ getHomeR = do
         provideRep $ return $ welcomeMessageJson site
 
 instance YesodDispatch App where
-    yesodDispatch yesodRunnerEnv req =
+    yesodDispatch yesodRunnerEnv req sendResponse =
         let maybeRoute =
                 case pathInfo req of
                     [] -> Just HomeR
@@ -623,7 +629,7 @@ instance YesodDispatch App where
                 case maybeRoute of
                     Nothing -> notFound
                     Just HomeR -> getHomeR
-         in yesodRunner handler yesodRunnerEnv maybeRoute req
+         in yesodRunner handler yesodRunnerEnv maybeRoute req sendResponse
 
 main :: IO ()
 main = do
@@ -635,7 +641,7 @@ main = do
     run 3000 waiApp
 ----
 
-=== Convenience +warp+ function
+==== Convenience +warp+ function
 
 And one minor convenience you'll see quite a bit in the Yesod world. It's very
 common to call +toWaiApp+ to create a WAI +Application+, and then pass that to
@@ -657,7 +663,7 @@ There's also a +warpEnv+ function which reads the port number from the +PORT+
 environment variable, which is useful for working with platforms such as FP
 Haskell Center, or deployment tools like Keter.
 
-== Writing handlers
+=== Writing handlers
 
 Since the vast majority of your application will end up living in the
 +HandlerT+ monad transformer, it's not surprising that there are quite a few
@@ -674,7 +680,7 @@ functions is that, ultimately, they return a type which is an instance of
 This section is just a short overview of functionality. For more information,
 you should either look through the Haddocks, or read the rest of this book.
 
-=== Getting request parameters
+==== Getting request parameters
 
 There are a few pieces of information provided by the client in a request:
 
@@ -689,7 +695,7 @@ While you can use these functions directly for such purposes as processing
 forms, you usually will want to use the yesod-form library, which provides a
 higher level form abstraction based on applicative functors.
 
-=== Short circuiting
+==== Short circuiting
 
 In some cases, you'll want to short circuit the handling of a request. Reasons
 for doing this would be:
@@ -700,7 +706,7 @@ for doing this would be:
 * Send a special response, such as with +sendFile+ or +sendResponseStatus+ (to override the status 200 response code)
 * +sendWaiResponse+ to drop down a level of abstraction, bypass some Yesod abstractions, and use WAI itself.
 
-=== Streaming
+==== Streaming
 
 So far, the examples of +ToTypedContent+ instances I gave all involved
 non-streaming responses. +Html+, +Text+, and +Value+ all get converted into a
@@ -763,7 +769,7 @@ getHomeR = respondSource "text/plain" $ do
                     fromByteString "\n"
 
 instance YesodDispatch App where
-    yesodDispatch yesodRunnerEnv req =
+    yesodDispatch yesodRunnerEnv req sendResponse =
         let maybeRoute =
                 case pathInfo req of
                     [] -> Just HomeR
@@ -772,13 +778,13 @@ instance YesodDispatch App where
                 case maybeRoute of
                     Nothing -> notFound
                     Just HomeR -> getHomeR
-         in yesodRunner handler yesodRunnerEnv maybeRoute req
+         in yesodRunner handler yesodRunnerEnv maybeRoute req sendResponse
 
 main :: IO ()
 main = warp 3000 App
 ----
 
-== Dynamic parameters
+=== Dynamic parameters
 
 Now that we've finished our detour into the details of the +HandlerT+
 transformer, let's get back to higher-level Yesod request processing. So far,
@@ -829,14 +835,14 @@ And then we can write our +YesodDispatch+ typeclass instance:
 [source, haskell]
 ----
 instance YesodDispatch App where
-    yesodDispatch yesodRunnerEnv req =
+    yesodDispatch yesodRunnerEnv req sendResponse =
         let maybeRoute = parseRoute' (pathInfo req)
             handler =
                 case maybeRoute of
                     Nothing -> notFound
                     Just HomeR -> getHomeR
                     Just (FibR i) -> getFibR i
-         in yesodRunner handler yesodRunnerEnv maybeRoute req
+         in yesodRunner handler yesodRunnerEnv maybeRoute req sendResponse
 
 getHomeR = redirect (FibR 1)
 
@@ -850,7 +856,7 @@ Notice our call to +redirect+ in +getHomeR+. We're able to use the route
 datatype as the parameter to +redirect+, and Yesod takes advantage of our
 +renderRoute+ function to create a textual link.
 
-== Routing with Template Haskell
+=== Routing with Template Haskell
 
 Now let's suppose we want to add a new route to our previous application. We'd
 have to make the following changes:
@@ -924,7 +930,7 @@ you'd rather avoid Template Haskell, you're free to do so. Every example so far
 in this appendix has done so, and you can follow those techniques. We also have
 another, simpler approach in the Yesod world: +LiteApp+.
 
-=== LiteApp
+==== LiteApp
 
 +LiteApp+ allows you to throw away type safe URLs and Template Haskell. It uses
 a simple routing DSL in pure Haskell. Once again, as a simple comparison, let's
@@ -957,7 +963,7 @@ use +fromPathPiece+ to convert the parameter for +getFibR+ from +Text+ to an
 +Int+, so any invalid parameter will be got by Yesod itself. It's just one less
 piece of checking that you have to perform.
 
-== Shakespeare
+=== Shakespeare
 
 While generating plain text pages can be fun, it's hardly what one normally
 expects from a web framework. As you'd hope, Yesod comes built in with support
@@ -1084,7 +1090,7 @@ main = warp 3000 $ liteApp $ do
     onStatic (pack "script.js") $ dispatchTo getScriptR
 ----
 
-=== URL rendering function
+==== URL rendering function
 
 Likely the most confusing part of this is the +giveUrlRenderer+ calls. This
 gets into one of the most powerful features of Yesod: type-safe URLs. If you
@@ -1107,7 +1113,7 @@ ignored entirely), but +giveUrlRenderer+ is a convenient way of doing this.
 As we'll see next, +giveUrlRenderer+ isn't really needed most of the time,
 since Widgets end up providing the renderer function for us automatically.
 
-== Widgets
+=== Widgets
 
 Dealing with HTML, CSS and Javascript as individual components can be nice in
 many cases. However, when you want to build up reusable components for a page,
@@ -1144,15 +1150,15 @@ look-and-feel for your website. Many built-in pieces of Yesod, such as error
 messages, take advantage of the widget system, so by using widgets, you get a
 consistent feel throughout your site.
 
-== Forms
+=== Forms
 
 FIXME
 
-== Persistent
+=== Persistent
 
 FIXME
 
-== WAI middlewares
+=== WAI middlewares
 
 FIXME
 
