--- a/book/yesod-typeclass.asciidoc
+++ b/book/yesod-typeclass.asciidoc
@@ -230,7 +230,7 @@ easily define your own function and call that instead, when you override
 pages) automatically get this style.
 
 Overriding is very straight-forward: we use +widgetToPageContent+ to convert a
-+Widget+ to a title, head tags and body tags, and then use +giveUrlRenderer+ to
++Widget+ to a title, head tags and body tags, and then use +withUrlRenderer+ to
 convert a Hamlet template into an +Html+ value. We can even add extra widget
 components, like a Lucius template, from within +defaultLayout+. For more
 information, see the previous chapter on widgets.
@@ -272,7 +272,7 @@ instance Yesod App where
     defaultLayout contents = do
         PageContent title headTags bodyTags <- widgetToPageContent contents
         mmsg <- getMessage
-        giveUrlRenderer [hamlet|
+        withUrlRenderer [hamlet|
             $doctype 5
 
             <html>
